Fixed responsive featured image overflow problem.
http://support.themeblvd.com/forums/topic/thumbnails-grew-after-update/

--- a/framework/frontend/assets/css/themeblvd.css
+++ b/framework/frontend/assets/css/themeblvd.css
@@ -1080,13 +1080,25 @@ ul.sf-menu [class^="icon-"] {
 .featured-image-wrapper {
 	margin-bottom: 10px;
 }
+.featured-image-wrapper.attachment-grid_fifth_1 > .featured-image {
+    max-width: 200px;    
+}
+.featured-image-wrapper.attachment-grid_3 > .featured-image {
+    max-width: 240px;    
+}
+.featured-image-wrapper.attachment-grid_4 > .featured-image {
+    max-width: 320px;    
+}
+.featured-image-wrapper.attachment-grid_6 > .featured-image {
+    max-width: 472px;    
+}
 .attachment-small {
 	float: left;
 	margin-right: 20px;
 }
 .featured-image-wrapper a {
 	position: relative;
-	display: inline-block;
+	display: block;
 }
 .featured-image-wrapper img {
 	display: block;
